Fix spacing

--- a/src/components/ShortUrl/ShortUrl.scss
+++ b/src/components/ShortUrl/ShortUrl.scss
@@ -19,9 +19,8 @@
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 
-  margin: 1rem 0;
+  margin: 0;
   padding: 1rem 0;
-  // box-shadow: 0 4px 8px 0 rgba(0,0,0,0.1);
   border-radius: 0.4rem;
   background-color: $white;
 
@@ -57,7 +56,7 @@
     @include justify-content(space-between);
     @include align-items(center);
     column-gap: 1rem;
-    padding: 1rem;
+    padding: 1rem 1.5rem;
 
     .short-url__links {
       @include flex-flow(row);
